
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIZE ;
 int checkstatus (int ) ;
 int cmdbuf ;
 int dealpasv (int ) ;
 int memset (int ,int ,int ) ;
 char* pasvstr ;
 int readbuf (char*,int ,int ,int ) ;
 int sendbuf (int ,int ,int) ;
 int sockfd ;
 int sprintf (int ,char*,char*) ;
 int srvbuf ;

int setpasv()
{
    int j,port1;

    memset(cmdbuf,0,SIZE);
    j=sprintf(cmdbuf,"%s\r\n",pasvstr);
    sendbuf(sockfd,cmdbuf,j);
    readbuf("Set PASV",sockfd,srvbuf,SIZE);
    checkstatus(srvbuf);
    port1=dealpasv(srvbuf);
    return port1;
}
