; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_107.c_setpasv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_107.c_setpasv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cmdbuf = common dso_local global i32 0, align 4
@SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%s\0D\0A\00", align 1
@pasvstr = common dso_local global i8* null, align 8
@sockfd = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"Set PASV\00", align 1
@srvbuf = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setpasv() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @cmdbuf, align 4
  %4 = load i32, i32* @SIZE, align 4
  %5 = call i32 @memset(i32 %3, i32 0, i32 %4)
  %6 = load i32, i32* @cmdbuf, align 4
  %7 = load i8*, i8** @pasvstr, align 8
  %8 = call i32 @sprintf(i32 %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %7)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* @sockfd, align 4
  %10 = load i32, i32* @cmdbuf, align 4
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @sendbuf(i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* @sockfd, align 4
  %14 = load i32, i32* @srvbuf, align 4
  %15 = load i32, i32* @SIZE, align 4
  %16 = call i32 @readbuf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %13, i32 %14, i32 %15)
  %17 = load i32, i32* @srvbuf, align 4
  %18 = call i32 @checkstatus(i32 %17)
  %19 = load i32, i32* @srvbuf, align 4
  %20 = call i32 @dealpasv(i32 %19)
  store i32 %20, i32* %2, align 4
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @sprintf(i32, i8*, i8*) #1

declare dso_local i32 @sendbuf(i32, i32, i32) #1

declare dso_local i32 @readbuf(i8*, i32, i32, i32) #1

declare dso_local i32 @checkstatus(i32) #1

declare dso_local i32 @dealpasv(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
